argocd/apps/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: ghcr.io/nsudhanva/k8s-oracle:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
