argocd/apps/docs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs-route
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "129.80.56.234"
spec:
  parentRefs:
  - name: public-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "k3s.sudhanva.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: docs
      port: 80
